--- a/StackoverflowGuide/StackoverflowGuide/ClientApp/src/custom.css
+++ b/StackoverflowGuide/StackoverflowGuide/ClientApp/src/custom.css
@@ -59,6 +59,10 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
+.prettyprint-override {
+  background: lavender;
+}
+
 article,
 aside,
 figcaption,
